admissioncontrol/demo/envoy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_http
    address:
      socket_address: { address: 0.0.0.0, port_value: 9902 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: some_http_service }
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  - name: listener_grpc
    address:
      socket_address: { address: 0.0.0.0, port_value: 9903 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_grpc
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: some_grpc_service }
          http_filters:
          - name: envoy.filters.http.admission_control
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.admission_control.v3.AdmissionControl
              enabled:
                default_value: false
                runtime_key: admission_control.enabled
              sampling_window: 60s
              sr_threshold:
                default_value:
                  value: 95.0
                runtime_key: admission_control.sr_threshold
              aggression:
                default_value: 1.0
                runtime_key: admission_control.aggression
              rps_threshold:
                default_value: 1
                runtime_key: admission_control.rps_threshold
              max_rejection_probability:
                default_value:
                  value: 95.0
                runtime_key: admission_control.max_rejection_probability
              success_criteria:
                http_criteria:
                  http_success_status:
                  - start: 100
                    end: 400
                  - start: 404
                    end: 404
                grpc_criteria:
                  grpc_success_status:
                  - 0
                  - 1
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: some_http_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: some_http_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: upstream
                port_value: 9092
  - name: some_grpc_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: some_grpc_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: upstream
                port_value: 9093
